# SE-PROJECT

./: README.md  pyproject.toml
client/: a.html  client.html  js_client.html
server/src/: entities.py  main.py  network_module.py
server/tests/: test_main.py
