[tool.poetry]
name = "se-project2"
version = "0.1.0"
description = ""
authors = ["Nikita Denisov <nikita160412@yandex.ru>"]
readme = "README.md"
packages = [{include = "se_project2"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
